--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 
     "require" : {
         "php": "^5.5|^5.6|^7.0",
-        "phpspec/phpspec": "^2.0|^3.0",
+        "phpspec/phpspec": "^4.0",
         "phpunit/php-code-coverage": "^4.0"
     },
 
@@ -18,7 +18,7 @@
     },
 
     "require-dev": {
-        "bossa/phpspec2-expect": "dev-master"
+        "bossa/phpspec2-expect": "^3.0"
     },
 
     "extra" : {
